Added notes for deep learning and recommender systems

--- a/MathFunctions.ipynb
+++ b/MathFunctions.ipynb
@@ -10,17 +10,48 @@
     "\n",
     "`log` of 0 and negative numbers is undefined or NaN\n",
     "\n",
-    "**Input is limited to positive numbers and ouput plateaus for larger numbers**"
+    "**Input is limited to positive numbers and ouput plateaus for larger numbers**\n",
+    "\n",
+    "Log function allows us to visualize the relationship between the data where the dataset contains both small and large values by transforming them to a similar scale. \n",
+    "\n",
+    "**_It amplifies lower values and attenuates higher values_**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log of a large number 1000000:[11.51292546]\n",
+      "log of a medium number 1000:[4.60517019]\n",
+      "log of a small number 0.1:[-2.30258509]\n"
+     ]
+    }
+   ],
+   "source": [
+    "large_num = 1000000\n",
+    "medium_num = 1000\n",
+    "small_num = 0.1\n",
+    "\n",
+    "print('log of a large number {}:{}'.format(large_num, np.log([100000])))\n",
+    "print('log of a medium number {}:{}'.format(medium_num, np.log([100])))\n",
+    "print('log of a small number {}:{}'.format(small_num, np.log([0.1])))"
    ]
   },
   {
