Titanic Survival EDA and classification models

--- a/Misc/EDA.ipynb
+++ b/Misc/EDA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,13 +56,13 @@
       "        - compactness (perimeter^2 / area - 1.0)\n",
       "        - concavity (severity of concave portions of the contour)\n",
       "        - concave points (number of concave portions of the contour)\n",
-      "        - symmetry \n",
+      "        - symmetry\n",
       "        - fractal dimension (\"coastline approximation\" - 1)\n",
       "\n",
       "        The mean, standard error, and \"worst\" or largest (mean of the three\n",
-      "        largest values) of these features were computed for each image,\n",
-      "        resulting in 30 features.  For instance, field 3 is Mean Radius, field\n",
-      "        13 is Radius SE, field 23 is Worst Radius.\n",
+      "        worst/largest values) of these features were computed for each image,\n",
+      "        resulting in 30 features.  For instance, field 0 is Mean Radius, field\n",
+      "        10 is Radius SE, field 20 is Worst Radius.\n",
       "\n",
       "        - class:\n",
       "                - WDBC-Malignant\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,12 +424,12 @@
        "3           0.28390          0.2414              0.10520         0.2597   \n",
        "4           0.13280          0.1980              0.10430         0.1809   \n",
        "\n",
-       "   mean fractal dimension   ...    worst texture  worst perimeter  worst area  \\\n",
-       "0                 0.07871   ...            17.33           184.60      2019.0   \n",
-       "1                 0.05667   ...            23.41           158.80      1956.0   \n",
-       "2                 0.05999   ...            25.53           152.50      1709.0   \n",
-       "3                 0.09744   ...            26.50            98.87       567.7   \n",
-       "4                 0.05883   ...            16.67           152.20      1575.0   \n",
+       "   mean fractal dimension  ...  worst texture  worst perimeter  worst area  \\\n",
+       "0                 0.07871  ...          17.33           184.60      2019.0   \n",
+       "1                 0.05667  ...          23.41           158.80      1956.0   \n",
+       "2                 0.05999  ...          25.53           152.50      1709.0   \n",
+       "3                 0.09744  ...          26.50            98.87       567.7   \n",
+       "4                 0.05883  ...          16.67           152.20      1575.0   \n",
        "\n",
        "   worst smoothness  worst compactness  worst concavity  worst concave points  \\\n",
        "0            0.1622             0.6656           0.7119                0.2654   \n",
@@ -448,7 +448,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,6 +457,229 @@
     "cancer_df = pd.DataFrame.from_records(cancer_data.data, columns=cancer_data.feature_names)\n",
     "cancer_df['target'] = cancer_data.target\n",
     "cancer_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean radius</th>\n",
+       "      <th>mean texture</th>\n",
+       "      <th>mean perimeter</th>\n",
+       "      <th>mean area</th>\n",
+       "      <th>mean smoothness</th>\n",
+       "      <th>mean compactness</th>\n",
+       "      <th>mean concavity</th>\n",
+       "      <th>mean concave points</th>\n",
+       "      <th>mean symmetry</th>\n",
+       "      <th>mean fractal dimension</th>\n",
+       "      <th>...</th>\n",
+       "      <th>worst texture</th>\n",
+       "      <th>worst perimeter</th>\n",
+       "      <th>worst area</th>\n",
+       "      <th>worst smoothness</th>\n",
+       "      <th>worst compactness</th>\n",
+       "      <th>worst concavity</th>\n",
+       "      <th>worst concave points</th>\n",
+       "      <th>worst symmetry</th>\n",
+       "      <th>worst fractal dimension</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>13.540</td>\n",
+       "      <td>14.36</td>\n",
+       "      <td>87.46</td>\n",
+       "      <td>566.3</td>\n",
+       "      <td>0.09779</td>\n",
+       "      <td>0.08129</td>\n",
+       "      <td>0.06664</td>\n",
+       "      <td>0.047810</td>\n",
+       "      <td>0.1885</td>\n",
+       "      <td>0.05766</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.26</td>\n",
+       "      <td>99.70</td>\n",
+       "      <td>711.2</td>\n",
+       "      <td>0.14400</td>\n",
+       "      <td>0.17730</td>\n",
+       "      <td>0.23900</td>\n",
+       "      <td>0.12880</td>\n",
+       "      <td>0.2977</td>\n",
+       "      <td>0.07259</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>13.080</td>\n",
+       "      <td>15.71</td>\n",
+       "      <td>85.63</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>0.10750</td>\n",
+       "      <td>0.12700</td>\n",
+       "      <td>0.04568</td>\n",
+       "      <td>0.031100</td>\n",
+       "      <td>0.1967</td>\n",
+       "      <td>0.06811</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20.49</td>\n",
+       "      <td>96.09</td>\n",
+       "      <td>630.5</td>\n",
+       "      <td>0.13120</td>\n",
+       "      <td>0.27760</td>\n",
+       "      <td>0.18900</td>\n",
+       "      <td>0.07283</td>\n",
+       "      <td>0.3184</td>\n",
+       "      <td>0.08183</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>9.504</td>\n",
+       "      <td>12.44</td>\n",
+       "      <td>60.34</td>\n",
+       "      <td>273.9</td>\n",
+       "      <td>0.10240</td>\n",
+       "      <td>0.06492</td>\n",
+       "      <td>0.02956</td>\n",
+       "      <td>0.020760</td>\n",
+       "      <td>0.1815</td>\n",
+       "      <td>0.06905</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15.66</td>\n",
+       "      <td>65.13</td>\n",
+       "      <td>314.9</td>\n",
+       "      <td>0.13240</td>\n",
+       "      <td>0.11480</td>\n",
+       "      <td>0.08867</td>\n",
+       "      <td>0.06227</td>\n",
+       "      <td>0.2450</td>\n",
+       "      <td>0.07773</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>13.030</td>\n",
+       "      <td>18.42</td>\n",
+       "      <td>82.61</td>\n",
+       "      <td>523.8</td>\n",
+       "      <td>0.08983</td>\n",
+       "      <td>0.03766</td>\n",
+       "      <td>0.02562</td>\n",
+       "      <td>0.029230</td>\n",
+       "      <td>0.1467</td>\n",
+       "      <td>0.05863</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22.81</td>\n",
+       "      <td>84.46</td>\n",
+       "      <td>545.9</td>\n",
+       "      <td>0.09701</td>\n",
+       "      <td>0.04619</td>\n",
+       "      <td>0.04833</td>\n",
+       "      <td>0.05013</td>\n",
+       "      <td>0.1987</td>\n",
+       "      <td>0.06169</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>8.196</td>\n",
+       "      <td>16.84</td>\n",
+       "      <td>51.71</td>\n",
+       "      <td>201.9</td>\n",
+       "      <td>0.08600</td>\n",
+       "      <td>0.05943</td>\n",
+       "      <td>0.01588</td>\n",
+       "      <td>0.005917</td>\n",
+       "      <td>0.1769</td>\n",
+       "      <td>0.06503</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.96</td>\n",
+       "      <td>57.26</td>\n",
+       "      <td>242.2</td>\n",
+       "      <td>0.12970</td>\n",
+       "      <td>0.13570</td>\n",
+       "      <td>0.06880</td>\n",
+       "      <td>0.02564</td>\n",
+       "      <td>0.3105</td>\n",
+       "      <td>0.07409</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mean radius  mean texture  mean perimeter  mean area  mean smoothness  \\\n",
+       "19       13.540         14.36           87.46      566.3          0.09779   \n",
+       "20       13.080         15.71           85.63      520.0          0.10750   \n",
+       "21        9.504         12.44           60.34      273.9          0.10240   \n",
+       "37       13.030         18.42           82.61      523.8          0.08983   \n",
+       "46        8.196         16.84           51.71      201.9          0.08600   \n",
+       "\n",
+       "    mean compactness  mean concavity  mean concave points  mean symmetry  \\\n",
+       "19           0.08129         0.06664             0.047810         0.1885   \n",
+       "20           0.12700         0.04568             0.031100         0.1967   \n",
+       "21           0.06492         0.02956             0.020760         0.1815   \n",
+       "37           0.03766         0.02562             0.029230         0.1467   \n",
+       "46           0.05943         0.01588             0.005917         0.1769   \n",
+       "\n",
+       "    mean fractal dimension  ...  worst texture  worst perimeter  worst area  \\\n",
+       "19                 0.05766  ...          19.26            99.70       711.2   \n",
+       "20                 0.06811  ...          20.49            96.09       630.5   \n",
+       "21                 0.06905  ...          15.66            65.13       314.9   \n",
+       "37                 0.05863  ...          22.81            84.46       545.9   \n",
+       "46                 0.06503  ...          21.96            57.26       242.2   \n",
+       "\n",
+       "    worst smoothness  worst compactness  worst concavity  \\\n",
+       "19           0.14400            0.17730          0.23900   \n",
+       "20           0.13120            0.27760          0.18900   \n",
+       "21           0.13240            0.11480          0.08867   \n",
+       "37           0.09701            0.04619          0.04833   \n",
+       "46           0.12970            0.13570          0.06880   \n",
+       "\n",
+       "    worst concave points  worst symmetry  worst fractal dimension  target  \n",
+       "19               0.12880          0.2977                  0.07259       1  \n",
+       "20               0.07283          0.3184                  0.08183       1  \n",
+       "21               0.06227          0.2450                  0.07773       1  \n",
+       "37               0.05013          0.1987                  0.06169       1  \n",
+       "46               0.02564          0.3105                  0.07409       1  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cancer_df.query('target == 1').head()"
    ]
   },
   {
@@ -560,7 +783,7 @@
    "source": [
     "**Histogram shows the distribution of values within the feature**\n",
     "\n",
-    "Upper left corner shows the histogram shows distribution of mean radius for all samples in the training set\n",
+    "Upper left corner shows the histogram distribution of mean radius for all samples in the training set\n",
     "\n",
     "**Each plot show interaction between features corresponding outcome of benign or tumorous**\n",
     "\n",
@@ -643,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
